--- a/p5.html
+++ b/p5.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We are Innovators</title>
     <style>
+        /* Ensure the body and html adjust height based on content */
+        html,
         body {
+            height: auto;
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
@@ -17,8 +20,11 @@
             display: flex;
             align-items: center;
             justify-content: space-around;
-            padding: 50px;
+            padding: 20px;
             flex-wrap: wrap;
+            min-height: 100vh;
+            /* Ensures the container takes the minimum screen height */
+            box-sizing: border-box;
         }
 
         .text-section {
@@ -31,7 +37,7 @@
         }
 
         .text-section p {
-            margin-bottom: 30px;
+            margin-bottom: 25px;
             font-size: 1rem;
             line-height: 1.5;
         }
@@ -55,7 +61,7 @@
         .stats-section {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
+            gap: 10px;
         }
 
         .stat-card,
@@ -64,10 +70,18 @@
             background-color: white;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            padding: 20px;
+            padding: 70px;
             text-align: center;
             position: relative;
             overflow: hidden;
+        }
+
+        @media screen and (max-width: 900px) {
+            .stat-card,
+            .stat-card2,
+            .stat-card3 {
+                padding: 10px;
+            }
         }
 
         .stat-card2,
@@ -136,10 +150,7 @@
                 margin-bottom: 20px;
             }
 
-            .stats-section {
-                grid-template-columns: 1fr 1fr;
-                gap: 20px;
-            }
+     
 
             .stat-card,
             .stat-card2,
@@ -175,11 +186,7 @@
                 margin-bottom: 20px;
             }
 
-            .stats-section {
-                grid-template-columns: 1fr;
-                gap: 20px;
-            }
-
+          
             .stat-card,
             .stat-card2,
             .stat-card3 {
