--- a/p8.html
+++ b/p8.html
@@ -6,22 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
     <style>
-        html,
-        body {
-            height: 100%;
+        /* Apply box-sizing border-box for all elements */
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            overflow-x: hidden; /* Disable horizontal overflow */
+        }
+
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
             background-color: #183b51;
             color: white;
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 0 15px; /* Prevent horizontal scroll */
         }
 
         .container {
@@ -29,9 +35,10 @@
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            padding: 50px;
+            width: 100%;
             max-width: 1200px;
-            margin: 0 auto;
+            padding: 50px;
+            flex-wrap: wrap; /* Allow wrapping on small screens */
         }
 
         .content {
@@ -40,7 +47,6 @@
             flex-direction: column;
             justify-content: center;
             align-items: start;
-
         }
 
         .content h1 {
@@ -97,6 +103,70 @@
         .second {
             font-size: 14px;
         }
+
+        /* Media Queries for smaller screens */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                padding: 20px;
+            }
+
+            .content {
+                max-width: 100%;
+                text-align: center;
+            }
+
+            .form-container {
+                width: 100%;
+                margin-top: 30px;
+            }
+
+            .content h1 {
+                font-size: 28px;
+            }
+
+            .content p {
+                font-size: 16px;
+            }
+
+            .form-container input {
+                font-size: 16px;
+                padding: 10px 15px;
+            }
+
+            .form-container input[type="submit"] {
+                font-size: 16px;
+                padding: 12px 20px;
+            }
+        }
+
+        @media (max-width: 500px) {
+            .content h1 {
+                font-size: 24px;
+            }
+
+            .content p {
+                font-size: 14px;
+            }
+
+            .form-container h2 {
+                font-size: 20px;
+            }
+
+            .form-container input {
+                font-size: 14px;
+                padding: 8px 12px;
+            }
+
+            .form-container input[type="submit"] {
+                font-size: 14px;
+                padding: 10px 15px;
+            }
+
+            .second {
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 
@@ -105,8 +175,7 @@
         <div class="content">
             <h1>The form that starts smarter growth.</h1>
             <p>Let's turn your ideas into action.</p>
-            <p>Whether it's AI, marketing, or HubSpot mastery, we're ready to simplify the complex and supercharge your
-                growth.</p>
+            <p>Whether it's AI, marketing, or HubSpot mastery, we're ready to simplify the complex and supercharge your growth.</p>
             <p>Drop us a line, and let's make it happen!</p>
         </div>
         <div class="form-container">
