--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         /* You can add some global styles if necessary */
         iframe {
             width: 100%;
-            height: 600px; /* You can adjust the height as needed */
+            height: 600px;
+            /* You can adjust the height as needed */
             border: none;
             margin-bottom: 20px;
         }
@@ -19,7 +20,7 @@
 <body>
 
     <!-- Embedding p1.html -->
-  
+
 
     <!-- Embedding p2.html -->
     <iframe src="p2.html"></iframe>
