--- a/p10.html
+++ b/p10.html
@@ -193,7 +193,7 @@
 <body>
 
     <div class="main">
-        <img src="Images/p10.png">
+        <img src="images/p10.png">
 
         <div class="footer">
             <div class="footer-section">
