--- a/p3.html
+++ b/p3.html
@@ -222,7 +222,7 @@
         </div>
         <!-- Image column -->
         <div class="image-column">
-            <img src="Images/1.png" alt="Image" />
+            <img src="images/1.png" alt="Image" />
         </div>
     </div>
 </body>
