--- a/p4.html
+++ b/p4.html
@@ -147,7 +147,7 @@
         </div>
 
         <div class="image">
-            <img src="Images/brain-ai.png" alt="AI Brain Illustration">
+            <img src="images/brain-ai.png" alt="AI Brain Illustration">
         </div>
     </div>
 </body>
