--- a/p6.html
+++ b/p6.html
@@ -167,7 +167,7 @@
 
 <body>
     <div class="container">
-        <img src="Images/p6.png">
+        <img src="images/p6.png">
         <!-- Title -->
         <div class="title">Testimonial</div>
         <div class="subtitle">Our Client Feedback</div>
