--- a/p7.html
+++ b/p7.html
@@ -124,7 +124,7 @@
 </head>
 
 <body>
-    <img src="Images/Ellipse 4.png">
+    <img src="images/Ellipse 4.png">
     <div class="title">Articles</div>
     <div class="subtitle">Latest Articles & Blogs</div>
 
