--- a/p4.html
+++ b/p4.html
@@ -101,6 +101,10 @@
 
         /* Media query for screens smaller than 500px */
         @media (max-width: 500px) {
+            .container {
+                background: linear-gradient(90deg, #183A59 100%, #ffffff 30%);
+            }
+
             .content {
                 width: 100vw;
                 /* Full viewport width */
@@ -109,7 +113,7 @@
             }
 
             .image {
-                display: none;
+               
                 /* Hide the image on screens smaller than 500px */
             }
         }
